--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ nav:
 
 #Author config
 author:
-    name: jxwch
+    name: jianxianwch
     email: jianxianwch@126.com
     imageLink: https://avatars.githubusercontent.com/minixalpha
     simpleIntro: 我是 jxwch
